# FactorGraph

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  temp.sh  temp_var_score_test.sh
blif_solve/: CMakeLists.txt  Makefile  approx_merge.h  blif_factors.cpp  blif_factors.h  blif_solve  blif_solve_method.cpp  blif_solve_method.h  command_line_options.cpp  command_line_options.h  log.cpp  log.h  main.cpp  verilog_solve_main.cpp
blif_solve_lib/: CMakeLists.txt  Makefile  approx_merge.cpp  approx_merge.h  blif_factors.cpp  blif_factors.h  clo.cpp  clo.hpp  cnf_dump.cpp  cnf_dump.h  command_line_options.h  exports.mk  log.cpp  log.h  var_elim_merge.cpp
cling/: setup.cpp
cnf_dump/: CMakeLists.txt  Makefile  cnf_dump_clo.cpp  cnf_dump_clo.h  generate_random_qdimacs.cpp  main.cpp  simplify_qdimacs.cpp
dd/: CMakeLists.txt  Makefile  bdd_factory.cpp  bdd_factory.h  bdd_partition.cpp  bdd_partition.h  bnet.h  cuddAndAbsMulti.cpp  cuddAndAbsMulti.h  dd.cpp  dd.h  disjoint_set.h  dotty.cpp  dotty.h  doubly_linked_list.h  exports.mk  lru_cache.h  max_heap.h  optional.h  qdimacs.cpp  qdimacs.h  qdimacs_to_bdd.cpp  qdimacs_to_bdd.h
dec_21/: CMakeLists.txt  dec_21.odt  main.cpp
experiments/20190127/: mylog.txt
experiments/20190201/: README  awk_command.txt  collect_test_cases.sh  index.txt  process_logs.awk  remaining_test_cases.txt  results.tgz  run_all_test_cases.sh  run_one_test_case.sh  summarize_results.sh  summary.txt
experiments/20200123/: README  process_logs  process_logs.cpp  results.tgz  run_all_test_cases.sh  run_one_test_case.sh  summary.txt
experiments/Clipping/: README  index.txt  process_logs.awk  results.tgz  run_all_test_cases.sh  run_one_test_case.sh  summary.txt
experiments/Cudd_BddAndAbstractMulti/: process_logs.cpp  run_all_test_cases.sh  summary.txt
experiments/blif_stats/: full_log.txt  run_blif_solve.sh
experiments/both_solve_10min_1gb/: full_log.txt  summarize.awk  summarize.sh  summary.txt  table.txt
experiments/cudd_solve_10min_1gb/: full_log.txt  run_blif_solve.sh  summary.txt
experiments/dec_21/: collect_test_cases.sh  run_all_test_cases.sh
experiments/factor_graph_solve_10min_1gb/: full_log.txt  run_blif_solve.sh  summary.txt
experiments/oct_22/: all_cases.txt  index.txt  post_process.awk  results_60min.tgz  results_60min_100lss.tgz  results_small.tgz  run_all_tests.sh  run_chunk.sh  run_small.sh  run_test.sh  (+2 more)
factor_graph/: CMakeLists.txt  Makefile  dd.c  dd.h  exports.mk  factor_graph.cpp  factor_graph.h  fgpp.cpp  fgpp.h  hash_table.c  hash_table.cpp  hash_table.h  qbf.cpp  qbf.h  srt.cpp  srt.h
factor_graph_main/: CMakeLists.txt  Makefile  factor_graph_main  main.cpp
jan_24/: CMakeLists.txt  Dockerfile  ave_runner.py  caqe_runner.py  cnf_sax_parser.cpp  cnf_sax_parser.h  compare_bfss_input_and_kissat_output.cpp  compare_cnf.cpp  factorization_debugger.cpp  factorization_debugger_commands.sh  fgtest.cpp  full_list  innermost_existential.cpp  jan_24.py  jan_24_common.py  kissat_preprocess.cpp  remove_unaries.cpp  run_experiment.py  setup.sh  small_list  smoke_list  summarize.py  test_list
may_22/: CMakeLists.txt  main.cpp  may_22.odt  pseudo_code  pseudo_code.cpp
mustool/: CMakeLists.txt
mustool/algorithms/: marco.cpp  remus.cpp  tome.cpp
mustool/core/: Explorer.cpp  Explorer.h  Master.cpp  Master.h  misc.cpp  misc.h
mustool/custom_minisat/: Options.h  Solver.cc
mustool/mcsmus/glucose/core/: BoundedQueue.h  Solver.cc  Solver.h  SolverTypes.h
mustool/mcsmus/glucose/simp/: SimpSolver.cc  SimpSolver.h
mustool/mcsmus/mcsmus/: Main.cc  basesolver.hh  control.cc  dimacs.hh  glucose-wrapper.cc  glucose-wrapper.hh  mcsmus.cc  mcsmus.hh  minisat-wrapper.cc  minisat-wrapper.hh  minisolver.hh  options.cc  options.hh  system.hh
mustool/mcsmus/minisat/core/: Solver.cc  mcsmus_Solver.h  mcsmus_SolverTypes.h
mustool/mcsmus/minisat/mtl/: mcsmus_Alg.h  mcsmus_Alloc.h  mcsmus_Heap.h  mcsmus_IntMap.h  mcsmus_Map.h  mcsmus_Queue.h  mcsmus_Sort.h  mcsmus_Vec.h
mustool/mcsmus/minisat/simp/: SimpSolver.cc  mcsmus_SimpSolver.h
mustool/mcsmus/minisat/utils/: Options.cc  System.cc  mcsmus_Options.h  mcsmus_ParseUtils.h  mcsmus_System.h
mustool/satSolvers/: Dimacs.h  MSHandle.cpp  MSHandle.h  MucCallback.h  SatSolver.h  mcsmus.cpp
mustool/test/: test_qdimacs.py
oct_22/: CMakeLists.txt  algo.txt  approx_var_elim.cpp  approx_var_elim.h  ave2.cpp  ave2.h  ave2_main.cpp  ave_main.cpp  main.cpp  oct_22.odt  oct_22_lib.cpp  oct_22_lib.h  smart_must_set_disable_algorithm.txt  smart_must_set_disable_example.txt
qbf_solve/: CMakeLists.txt  Makefile  main.cpp  qbf_solve
scripts/: approxmc.sh  blif_solve.sh  ganak.sh  prefix.sh  rebuild.sh  run_blif_solve.sh  smoke_launch.sh
test/: CMakeLists.txt  Makefile  bdd_factory.cpp  bdd_factory.h  clipping_and_abstract_test.cpp  cnf_dump_test.cpp  main.cpp  random_bdd_generator.cpp  random_bdd_generator.h  test  test.cpp  testApproxMerge.cpp  testApproxMerge.h  testApproxVarElim.cpp  testApproxVarElim.h  testAve2.cpp  testVarScoreQuantification.cpp  testVarScoreQuantification.h
test/data/: 6s365r_bdd.blif  Factorization_factorization8_factor_graph_input.qdimacs  adder.qdimacs  simple_and.blif  simplify_qdimacs.qdimacs  test_case.blif  test_case_notes.txt
test/expected_outputs/: 6s365r_bdd.dimacs  Factorization_factorization8_output.cnf  adder.cnf  must_count_solutions.out  simple_and.dimacs  simple_and.out  simplify_qdimacs.cnf  simplify_qdimacs.qdimacs  testCnfDump.dimacs  testCnfDump.scalmc
var_score/: CMakeLists.txt  Makefile  exports.mk  main.cpp  var_score_approximation.cpp  var_score_approximation.h  var_score_graph_printer.cpp  var_score_graph_printer.h  var_score_quantification.cpp  var_score_quantification.h
verilog_parser/: Makefile  exports.mk  interpreter.cpp  interpreter.h  main.cpp  parser.y  scanner.h  scanner.l  verilog_types.h
verilog_to_bdd/: Makefile  exports.mk  interpreter.cpp  interpreter.h  main.cpp  parser.y  scanner.h  scanner.l  verilog_parser.y  verilog_scanner.h  verilog_scanner.l  verilog_to_bdd.cpp  verilog_to_bdd.h  verilog_types.h
(+90 files in other folders)
